tests/baselines/reference/parserES5ForOfStatement2.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement2.ts(1,9): error TS1123: Variable declaration list cannot be empty.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement2.ts (1 errors) ====
    for (var of X) {
            
!!! error TS1123: Variable declaration list cannot be empty.
    }